kong/kong-bridge.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong-bridge-svc
  namespace: default
spec:
  type: ExternalName
  externalName: kong-kong-proxy.kong.svc.cluster.local
